apps/deploy/userqueryapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: userqueryapi
  labels:
    app: eventstore-samples
    component: userqueryapi
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: eventstore-samples
      component: userqueryapi
  template:
    metadata:
      labels:
        app: eventstore-samples
        component: userqueryapi
      annotations:
        eventstore/enabled: "true"
        eventstore/names: "usereventstore"
        eventstore/port: "5600"
        eventstore/appid: "userqueryapi"
        dapr.io/enabled: "true"
        dapr.io/id: "userqueryapi"
        dapr.io/port: "5000"
    spec:
      containers:
        - name: userqueryapi
          image: m009/userqueryapi:0.18
          imagePullPolicy: Always
