apps/deploy/usercommandapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usercommandapi
  labels:
    app: eventstore-samples
    component: usercommandapi
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: eventstore-samples
    component: usercommandapi
