apps/deploy/usercommandapi-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: usercommandapi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /usercommands(/|$)(.*)
        backend:
          serviceName: usercommandapi
          servicePort: 80
